# esgfdownloader

./: .gitignore  README.md  env.yml  pyproject.toml  wget-20221026075853.sh
.github/workflows/: build-and-test.yml
src/: esgffilterbyyear.py  qc.py  splitter.py
tests/: test_cli.py  test_clis.py  test_filterer_cli.py  test_qc.py
tests/data/: wget-test.sh
tests/data/cmiphist_results_example25012023/1/: split-split-filtered-wget-20221130090039-vas_psl_uas-0.sh  uas_day_CanESM5_historical_r15i1p1f1_gn_18500101-20141231.nc  vas_day_CanESM5_historical_r17i1p1f1_gn_18500101-20141231.nc.filepart  vas_day_CanESM5_historical_r4i1p1f1_gn_18500101-20141231.nc.filepart
tests/data/cmiphist_results_example25012023/2/: split-split-filtered-wget-20221130090219-vas_psl_uas-1.sh  uas_day_CanESM5_historical_r14i1p1f1_gn_18500101-20141231.nc  uas_day_CanESM5_historical_r17i1p1f1_gn_18500101-20141231.nc  vas_day_CanESM5_historical_r15i1p1f1_gn_18500101-20141231.nc  vas_day_CanESM5_historical_r19i1p1f1_gn_18500101-20141231.nc.filepart
tests/data/splitgroup/: wget-mpilr_r30_hist.sh
tests/data/splitlink/: wget-20220725055633.sh
